lab1/Test/L1-A-1-61.cmm
struct zIVpj6 {
  float CknvV6aw , SddQc , orBKkyLon7r 415645814.1141600253 
    ;
  int zbe0weTOiBFRy8XFk7 [ 286717468 ] [ 619414664 
    ] [ 1573626770 ] [ 1295236209 != ] , l7Ggj = _3rf 
    , JksscDl ;
  struct {
  }Mf2NHnOGoTgz [ 2028856280 ] = - wFuYgceU4l = RLncz 
    , , M ;
  struct b3im7W  zq [ 2009994871 ] ;
  float bSlEuK = cYn , XoqYFDcj1 ;. 
  int qJIA1WPznYeI5 ;
}bWnMekCE 
;
